--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 
 .container {
     margin: 50px auto;
-    width: 500px;
+    width: 800px;
 }
 
 .table-buttons {
@@ -61,13 +61,22 @@ body {
     margin-bottom: 5px;
 }
 
-.form-group input {
+.form-group input,
+.form-group select {
     width: 100%;
     padding: 8px;
     box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #2c2c54;
+    color: #ffffff;
 }
 
-/* New styles for table and delete buttons */
+.form-group select option {
+    background-color: #2c2c54;
+    color: #ffffff;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
